--- a/templates/posts/detail.html
+++ b/templates/posts/detail.html
@@ -12,6 +12,8 @@
     <h3>{{ post.title }} ({{ post.id }})</h3>
     <p>{{ post.timestamp }} | {{ post.updated }}</p>
     <p>{{ post.content }}</p>
+
+    <a href="/posts/">Back</a>
     
 </body>
 </html>
