--- a/templates/posts/index.html
+++ b/templates/posts/index.html
@@ -10,7 +10,8 @@
     <h2>{{ title }} is working</h2>
 
     {% for post in posts  %}
-        <h3>{{ post.title }} ({{ post.id }})</h3>
+        <!-- <h3><a href="{% url 'posts:detail' id=post.id %}">{{ post.title }}</a> ({{ post.id }})</h3> -->
+        <h3><a href="{{ post.get_absolute_url }}">{{ post.title }}</a> ({{ post.id }})</h3>
         <p>{{ post.timestamp }} | {{ post.updated }}</p>
         <p>{{ post.content }}</p>
     {% endfor %}
