--- a/templates/posts/detail.html
+++ b/templates/posts/detail.html
@@ -9,6 +9,14 @@
 <body>
     <h2>{{ title }} is working</h2>
 
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+
     <h3>{{ post.title }} ({{ post.id }})</h3>
     <p>{{ post.timestamp }} | {{ post.updated }}</p>
     <p>{{ post.content }}</p>
