--- a/templates/posts/detail.html
+++ b/templates/posts/detail.html
@@ -1,27 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <h2>{{ title }} is working</h2>
+{% extends "base.html" %}
 
-    {% if messages %}
-        <ul class="messages">
-            {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}
+{% block head_title %}{{ post.title }} | {{ block.super }}{% endblock head_title %}
+
+{% block content %}
+    <h2>{{ title }} Page</h2>
 
     <h3>{{ post.title }} ({{ post.id }})</h3>
     <p>{{ post.timestamp }} | {{ post.updated }}</p>
     <p>{{ post.content }}</p>
 
     <a href="/posts/">Back</a>
-    
-</body>
-</html>
+{% endblock content %}
