--- a/templates/posts/form.html
+++ b/templates/posts/form.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <h2>Form</h2>
+{% extends "base.html" %}
+
+{% block head_title %}Create Post | {{ block.super }}{% endblock head_title %}
+
+{% block content %}
+    <h2>Create Form</h2>
 
     <form method="POST" action="">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Create Post">
     </form>
-
-
-</body>
-</html>
+{% endblock content %}
