--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,12 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <title>{% block head_title %}My Site{% endblock head_title %}</title>
 </head>
 <body>
