--- a/templates/posts/form.html
+++ b/templates/posts/form.html
@@ -3,11 +3,39 @@
 {% block head_title %}Create Post | {{ block.super }}{% endblock head_title %}
 
 {% block content %}
-    <h2>Create Form</h2>
+    <main role="main" class="container">
+        <div class="row">
+            <div class="col-md-8 blog-main">
+                <h3 class="pb-3 mb-4 font-italic border-bottom">
+                    Create a Post
+                </h3>
+                
+                <form method="POST" action="">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <input type="submit" value="Create Post">
+                </form>
+            
+                <form method="POST" action="">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label for="title">Title</label>
+                        <input type="text" class="form-control" id="title" placeholder="Enter title">
+                    </div>
+                    <div class="form-group">
+                        <label for="content">Content</label>
+                        <textarea class="form-control" id="content" rows="5" placeholder="Enter content"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary">Create post</button>
+                    </div>
+                </form>
 
-    <form method="POST" action="">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Create Post">
-    </form>
+            </div><!-- /.blog-main -->
+
+            {% include "partials/aside.html" %}
+
+        </div><!-- /.row -->
+
+    </main><!-- /.container -->
 {% endblock content %}
