--- a/templates/posts/form.html
+++ b/templates/posts/form.html
@@ -10,6 +10,8 @@
                     Create a Post
                 </h3>
                 
+                video bookmark: 26/38 also check if form submition works, below
+
                 <form method="POST" action="">
                     {% csrf_token %}
                     {{ form.as_p }}
