--- a/templates/partials/messages.html
+++ b/templates/partials/messages.html
@@ -1,5 +1,5 @@
 {% if messages %}
-    <div class="messages">
+    <div class="messages alert alert-success" role="alert">
         <ul class="messages">
             {% for message in messages %}
                 <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
