--- a/templates/posts/form.html
+++ b/templates/posts/form.html
@@ -12,7 +12,7 @@
                 
                 video bookmark: 26/38 also check if form submition works, below
 
-                <form method="POST" action="">
+                <form method="POST" action="" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form.as_p }}
                     <input type="submit" value="Create Post">
