--- a/templates/posts/detail.html
+++ b/templates/posts/detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load urlify %}
 
 {% block head_title %}{{ post.title }} | {{ block.super }}{% endblock head_title %}
 
@@ -18,7 +19,9 @@
 
                     <!-- Shareable links -->
                     <a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}">Share on Facebook</a> |
-                    <a href="https://www.twitter.com/home?status={{ share_string }}%20{{ request.build_absolute_uri }}">Share on Twitter</a>
+                    <a href="https://www.twitter.com/home?status={{ share_string }}%20{{ request.build_absolute_uri }}">Share on Twitter</a> |
+
+                    <a href="https://www.twitter.com/home?status={{ post.content|truncatechars:80|urlify }}%20{{ request.build_absolute_uri }}">Share on Twitter with Filter Option</a>
 
                     {% if post.image %}
                         <img src="{{ post.image.url }}" class="img-responsive" alt="">                    
